fix chatroom alignment

--- a/client/stylesheets/chatroom.scss
+++ b/client/stylesheets/chatroom.scss
@@ -52,7 +52,8 @@
 			background-color: $theme-color-main;
 			color: whitesmoke;
 			box-shadow: none;
-			height: 18px;
+			height: 20px;
+			margin-bottom: -2px;
 
 			$placeholder-color: whitesmoke;
 			&::-webkit-input-placeholder {
